# drs

./: .dockerignore  .gitignore  DEPLOY.md  README.md  VALIDACAO.md  docker-compose.vps.yml  docker-compose.yml  start.bat  start.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/apps/website/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/website/migrations/: 0001_initial.py  0002_herohome.py  0003_quemsomos.py  0004_diferencial.py  0005_homeatuacao.py  0006_historia.py  0007_homeequipe.py  0008_homeblog.py  0009_homecontato.py  0010_paginaquemsomos_galeriaquemsomos.py  0011_membroequipe_delete_equipe_alter_atuacao_options_and_more.py
backend/core/: settings.py  urls.py
deploy/: .env.vps.example  PASSO-A-PASSO-VPS.md  nginx-dsr.conf
frontend/: Dockerfile  next.config.ts  package-lock.json
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/atuacoes/: page.tsx
frontend/src/app/atuacoes/[slug]/: page.tsx
frontend/src/app/blog/: page.tsx
frontend/src/app/blog/[slug]/: page.tsx
frontend/src/app/contato/: page.tsx
frontend/src/app/equipe/: page.tsx
frontend/src/app/quem-somos/: page.tsx
frontend/src/app/types/: index.ts
frontend/src/components/: AboutSection.tsx  BlogHomeSection.tsx  ContactForm.tsx  ContactHomeSection.tsx  DifferentialsSection.tsx  Footer.tsx  GallerySection.tsx  HeroSection.tsx  HistorySection.tsx  Icon.tsx  Navbar.tsx  PracticeSection.tsx  ServicesSection.tsx  TeamGalleryClient.tsx  TeamHomeSection.tsx
frontend/src/utils/: api.ts  imageUrl.ts
